--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,4 +12,7 @@
     <servlet-name>Dispatcher</servlet-name>
     <url-pattern>/dispatcher</url-pattern>
   </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>pages/welcome.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
